[package]
name = "queue"
version = "0.1.0"
edition = "2021"

[lib]
name = "queue"
path = "src/lib.rs"

[[bin]]
name = "queue"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.89"
chrono = { version = "0.4.38", features = ["serde"] }
deadpool-postgres = { version = "0.14.0", features = ["rt_tokio_1"] }
futures = "0.3.30"
postgres-types = { version = "0.2.8", features = ["derive"] }
rand = "0.8.5"
rand_distr = "0.4.3"
refinery = { version = "0.8.14", features = ["tokio-postgres"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
testcontainers = { version = "0.22.0", features = ["blocking", "watchdog"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["v4"] }
